--- a/custom_components/hite_pro/manifest.json
+++ b/custom_components/hite_pro/manifest.json
@@ -1,16 +1,19 @@
 {
-  "domain": "hitepro",
+  "domain": "hite_pro",
   "name": "Hite-Pro Bridge",
+  "version": "0.1.0",
   "codeowners": [
     "@jadenjoy"
   ],
-  "version": "0.1.0",
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://www.home-assistant.io/integrations/hitepro",
+  "documentation": "https://www.home-assistant.io/integrations/hite_pro",
   "homekit": {},
   "iot_class": "local_polling",
-  "requirements": [],
+  "requirements": [
+    "rx==3.0.1",
+    "pycryptodome==3.15.0"
+  ],
   "ssdp": [],
   "zeroconf": []
 }
